--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "nette/safe-stream": "^2"
     },
     "require-dev": {
-        "nette/tester": "^1.7"
+        "nette/tester": "^1.7",
+        "tracy/tracy": "^2.4"
     }
 }
